bugfix: ticket 0001092 - tile font blurry

--- a/src/scss/_tile.scss
+++ b/src/scss/_tile.scss
@@ -18,6 +18,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transform: translate3d(-50%, -50%, 0);
+    backface-visibility: hidden;
+
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: auto;
   }
 
   .tile__title {
